--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="신청곡을 부탁해">
     <meta property="og:description" content="끊임없이 흘러나오는 길거리 음악. 노래 신청을 하면 신청한 노래를 틀어드립니다.">
-    <meta property="og:image" content="https://camo.githubusercontent.com/b7b7815fdcd4fcf3f17ff979ca031477a5c85855/68747470733a2f2f6269676d616e736f6e672e6769746875622e696f2f6f2532302831292e6a706567" alt="" data-canonical-src="https://bigmansong.github.io/o%20(1).jpeg">
+    <meta property="og:image" content="https://camo.githubusercontent.com/b7b7815fdcd4fcf3f17ff979ca031477a5c85855/68747470733a2f2f6269676d616e736f6e672e6769746875622e696f2f6f2532302831292e6a706567" alt="" data-canonical-src="https://bigmansong.github.io/o.jpeg">
     <meta property="og:url" content="https://bigmansong.github.io">
     <meta property="og:type" content="website">
 </head>
